testing valuesRaw
